2014-09-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/usuarios/configurar_usuarios.php
	  include/functions_config.php
	  include/functions_incidents.php: Removed warnings to 
	run integria cron. Tickets #1256.

2014-08-28  Vanessa Gil <vanessa.gil@artica.es>
	
	* index.php: Fixed several bugs. Tickets #1214, #1215.

2014-08-27  Vanessa Gil <vanessa.gil@artica.es>
	
	* index.php: Show custom screen instead of
	home page.

2014-08-27  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/incidents/incident_detail.php: Fixed bug
	#1208.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/ajax/crm.php
	  include/js/integria_crm.js
	  operation/companies/company_detail.php: Modified edition
	of parent company. Ticket #1193.

2014-08-18  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_tasks.php: Fixed the items count
	on the function "tasks_print_tree".

2014-08-14  Sancho Lerena <slerena@artica.es>

	* integria_demo.sql: Fixed outdated insert (missing cols)

2014-08-14  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/users/user_workunit_report.php: Fixed problems
	listing wu. Ticket #1149.

2014-08-12  Sancho lerena <slerena@artica.es>

	* extras/mr/12.sql: Fixed MODIFY TABLE, is an ADD.

2014-08-13  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_form.php: Fixed an bug in the function
	"combo_task_user_participant".

2014-08-12  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/main_menu.php: Bugfix.

2014-08-11  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/constants.php: Added new constants with the seconds
	contained in some date ranges.

	* include/constants.php: Added the function
	"translate_lead_estimated_sale". Fixed the function
	"translate_lead_estimated_close_date".

	* include/js/integria.js: Now the function "toggleDiv"
	can toggle the elements with a slide animation.

	* operation/leads/lead_detail.php: Fixed the lead alarm