@@ -1,3 +1,8 @@
+2014-09-10  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* include/functions.php: Fixed problem when
+	you login with a user without group assigned.
+
 2014-09-09  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* godmode/usuarios/configurar_usuarios.php
